ikinci soru çözüldü

--- a/27.08.21 ITX Questions.ipynb
+++ b/27.08.21 ITX Questions.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "2dfa20af",
    "metadata": {},
@@ -121,11 +120,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "0f34636d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3: [4, 7, 4], 1: [8], 9: [2, 7, 2, 1, 6, 3, 2, 5, 4], 2: [2, 3]}\n",
+      "[2, 7, 2, 1, 6, 3, 2, 5, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def longest_substring(x):\n",
+    "    dictionary = {}\n",
+    "    count = 0\n",
+    "    count2 = 1\n",
+    "    outer = []\n",
+    "    while count2 < len(x):\n",
+    "        inner = []\n",
+    "        if int(x[count2]) % 2 == int(x[count]) % 2:\n",
+    "            count += 1\n",
+    "            count2 += 1\n",
+    "        \n",
+    "        while int(x[count2]) % 2 != int(x[count]) % 2:\n",
+    "            inner.append(int(x[count]))\n",
+    "            count += 1\n",
+    "            count2 += 1\n",
+    "            if count2 == len(x):\n",
+    "                break\n",
+    "        \n",
+    "        inner.append(int(x[count]))\n",
+    "        dictionary[len(inner)] = inner\n",
+    "    print(dictionary)\n",
+    "\n",
+    "    print(dictionary[(max(dictionary.keys()))])\n",
+    "\n",
+    "longest_substring(\"225424272163254474441338664823\") "
+   ]
   },
   {
    "cell_type": "code",
